// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AlbumTracksList > matches the snapshot 1`] = `
"<div class="column centerAll noMediaMessage">
  <phmusicnotes size="50"></phmusicnotes>
  <p>No tracks found.</p>
</div>"
`;

exports[`AlbumTracksList > when tracks prop is not an empty array > matches the snapshot 1`] = `
"<div class="trackTable">
  <div class="trackHeader">
    <div class="trackCell">Track</div>
    <div class="trackCell trackSecondary">Artists</div>
    <div class="trackCell trackTime">Duration</div>
    <div class="trackCell trackOptions"></div>
  </div>
  <div class="trackRow" data-test-id="track">
    <div class="trackCell">
      <div>
        <div class="overlapWrapper trackPlayPause">
          <p class="overlap trackNumber">1</p>
          <div class="overlap playPauseWrapper"><button class="centerItems buttonLink centerAll themeHoverButton globalLink buttonLink centerAll themeHoverButton globalLink buttonLink" type="button">
              <phplay aria-hidden="true" class="icon" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play track </span>
            </button></div>
        </div>
        <div class="noTouchEvents trackMeta">
          <div class="marqueeScroll mBXS" inert="">
            <div class="bulletList inner">
              <div class="content">
                <h4>track-0</h4>
              </div>
            </div>
          </div>
          <div class="marqueeScroll smallFont mobileOnly mBXS">
            <div class="bulletList inner">
              <div class="content">
                <ul class="bulletList">
                  <li><span class="visuallyHidden">Track album</span><a class="link" data-test-id="link">album</a></li>
                  <!--v-if-->
                  <li><span class="visuallyHidden">Track artists</span>
                    <ul class="commaList">
                      <li data-test-id="artist-list-item"><a aria-label="Go to artist name" class="link">name</a></li>
                      <li data-test-id="artist-list-item"><a aria-label="Go to artist name1" class="link">name1</a></li>
                    </ul>
                  </li>
                  <!--v-if-->
                  <li><span class="visuallyHidden">Duration</span><span><!--v-if--><time>00:19</time></span></li>
                </ul>
              </div>
            </div>
          </div>
        </div><button class="centerItems buttonLink" type="button" title="Like track">
          <phheart aria-hidden="true" class="icon" size="24" weight="regular"></phheart><span class="clamp text visuallyHidden">Like track</span>
        </button>
      </div>
    </div>
    <div class="trackCell trackSecondary">
      <div class="marqueeScroll">
        <div class="bulletList inner">
          <div class="content">
            <ul class="commaList">
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name" class="link">name</a></li>
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name1" class="link">name1</a></li>
            </ul>
          </div>
        </div>
      </div>
    </div><time class="trackCell trackTime">00:19</time>
    <div class="trackCell trackOptions">
      <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" type="button" title="More">
          <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
        </button>
        <div class="dropdown fade-enter-from fade-enter-active">
          <ul>
            <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" type="button">
                <!--v-if--><span class="clamp text"> Add to playlist </span>
              </button></li>
            <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" type="button">
                <!--v-if--><span class="clamp text"> Media information </span>
              </button></li>
            <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" type="button">
                <!--v-if--><span class="clamp text"> Download track </span>
              </button></li>
            <li aria-hidden="true" class="divider"></li>
            <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" type="button">
                <!--v-if--><span class="clamp text"> Add to queue </span>
              </button></li>
            <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" type="button">
                <!--v-if--><span class="clamp text"> Play Track </span>
              </button></li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <div class="trackRow" data-test-id="track">
    <div class="trackCell">
      <div>
        <div class="overlapWrapper trackPlayPause">
          <p class="overlap trackNumber">1</p>
          <div class="overlap playPauseWrapper"><button class="centerItems buttonLink centerAll themeHoverButton globalLink buttonLink centerAll themeHoverButton globalLink buttonLink" type="button">
              <phplay aria-hidden="true" class="icon" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play track </span>
            </button></div>
        </div>
        <div class="noTouchEvents trackMeta">
          <div class="marqueeScroll mBXS" inert="">
            <div class="bulletList inner">
              <div class="content">
                <h4>track-1</h4>
              </div>
            </div>
          </div>
          <div class="marqueeScroll smallFont mobileOnly mBXS">
            <div class="bulletList inner">
              <div class="content">
                <ul class="bulletList">
                  <li><span class="visuallyHidden">Track album</span><a class="link" data-test-id="link">album</a></li>
                  <!--v-if-->
                  <li><span class="visuallyHidden">Track artists</span>
                    <ul class="commaList">
                      <li data-test-id="artist-list-item"><a aria-label="Go to artist name" class="link">name</a></li>
                      <li data-test-id="artist-list-item"><a aria-label="Go to artist name1" class="link">name1</a></li>
                    </ul>
                  </li>
                  <!--v-if-->
                  <li><span class="visuallyHidden">Duration</span><span><!--v-if--><time>00:19</time></span></li>
                </ul>
              </div>
            </div>
          </div>
        </div><button class="centerItems buttonLink" type="button" title="Like track">
          <phheart aria-hidden="true" class="icon" size="24" weight="regular"></phheart><span class="clamp text visuallyHidden">Like track</span>
        </button>
      </div>
    </div>
    <div class="trackCell trackSecondary">
      <div class="marqueeScroll">
        <div class="bulletList inner">
          <div class="content">
            <ul class="commaList">
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name" class="link">name</a></li>
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name1" class="link">name1</a></li>
            </ul>
          </div>
        </div>
      </div>
    </div><time class="trackCell trackTime">00:19</time>
    <div class="trackCell trackOptions">
      <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" type="button" title="More">
          <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
        </button>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div class="trackRow" data-test-id="track">
    <div class="trackCell">
      <div>
        <div class="overlapWrapper trackPlayPause">
          <p class="overlap trackNumber">1</p>
          <div class="overlap playPauseWrapper"><button class="centerItems buttonLink centerAll themeHoverButton globalLink buttonLink centerAll themeHoverButton globalLink buttonLink" type="button">
              <phplay aria-hidden="true" class="icon" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play track </span>
            </button></div>
        </div>
        <div class="noTouchEvents trackMeta">
          <div class="marqueeScroll mBXS" inert="">
            <div class="bulletList inner">
              <div class="content">
                <h4>track-2</h4>
              </div>
            </div>
          </div>
          <div class="marqueeScroll smallFont mobileOnly mBXS">
            <div class="bulletList inner">
              <div class="content">
                <ul class="bulletList">
                  <li><span class="visuallyHidden">Track album</span><a class="link" data-test-id="link">album</a></li>
                  <!--v-if-->
                  <li><span class="visuallyHidden">Track artists</span>
                    <ul class="commaList">
                      <li data-test-id="artist-list-item"><a aria-label="Go to artist name" class="link">name</a></li>
                      <li data-test-id="artist-list-item"><a aria-label="Go to artist name1" class="link">name1</a></li>
                    </ul>
                  </li>
                  <!--v-if-->
                  <li><span class="visuallyHidden">Duration</span><span><!--v-if--><time>00:19</time></span></li>
                </ul>
              </div>
            </div>
          </div>
        </div><button class="centerItems buttonLink" type="button" title="Like track">
          <phheart aria-hidden="true" class="icon" size="24" weight="regular"></phheart><span class="clamp text visuallyHidden">Like track</span>
        </button>
      </div>
    </div>
    <div class="trackCell trackSecondary">
      <div class="marqueeScroll">
        <div class="bulletList inner">
          <div class="content">
            <ul class="commaList">
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name" class="link">name</a></li>
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name1" class="link">name1</a></li>
            </ul>
          </div>
        </div>
      </div>
    </div><time class="trackCell trackTime">00:19</time>
    <div class="trackCell trackOptions">
      <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" type="button" title="More">
          <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
        </button>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div class="trackRow" data-test-id="track">
    <div class="trackCell">
      <div>
        <div class="overlapWrapper trackPlayPause">
          <p class="overlap trackNumber">1</p>
          <div class="overlap playPauseWrapper"><button class="centerItems buttonLink centerAll themeHoverButton globalLink buttonLink centerAll themeHoverButton globalLink buttonLink" type="button">
              <phplay aria-hidden="true" class="icon" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play track </span>
            </button></div>
        </div>
        <div class="noTouchEvents trackMeta">
          <div class="marqueeScroll mBXS" inert="">
            <div class="bulletList inner">
              <div class="content">
                <h4>track-3</h4>
              </div>
            </div>
          </div>
          <div class="marqueeScroll smallFont mobileOnly mBXS">
            <div class="bulletList inner">
              <div class="content">
                <ul class="bulletList">
                  <li><span class="visuallyHidden">Track album</span><a class="link" data-test-id="link">album</a></li>
                  <!--v-if-->
                  <li><span class="visuallyHidden">Track artists</span>
                    <ul class="commaList">
                      <li data-test-id="artist-list-item"><a aria-label="Go to artist name" class="link">name</a></li>
                      <li data-test-id="artist-list-item"><a aria-label="Go to artist name1" class="link">name1</a></li>
                    </ul>
                  </li>
                  <!--v-if-->
                  <li><span class="visuallyHidden">Duration</span><span><!--v-if--><time>00:19</time></span></li>
                </ul>
              </div>
            </div>
          </div>
        </div><button class="centerItems buttonLink" type="button" title="Like track">
          <phheart aria-hidden="true" class="icon" size="24" weight="regular"></phheart><span class="clamp text visuallyHidden">Like track</span>
        </button>
      </div>
    </div>
    <div class="trackCell trackSecondary">
      <div class="marqueeScroll">
        <div class="bulletList inner">
          <div class="content">
            <ul class="commaList">
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name" class="link">name</a></li>
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name1" class="link">name1</a></li>
            </ul>
          </div>
        </div>
      </div>
    </div><time class="trackCell trackTime">00:19</time>
    <div class="trackCell trackOptions">
      <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" type="button" title="More">
          <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
        </button>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div class="trackRow" data-test-id="track">
    <div class="trackCell">
      <div>
        <div class="overlapWrapper trackPlayPause">
          <p class="overlap trackNumber">1</p>
          <div class="overlap playPauseWrapper"><button class="centerItems buttonLink centerAll themeHoverButton globalLink buttonLink centerAll themeHoverButton globalLink buttonLink" type="button">
              <phplay aria-hidden="true" class="icon" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play track </span>
            </button></div>
        </div>
        <div class="noTouchEvents trackMeta">
          <div class="marqueeScroll mBXS" inert="">
            <div class="bulletList inner">
              <div class="content">
                <h4>track-4</h4>
              </div>
            </div>
          </div>
          <div class="marqueeScroll smallFont mobileOnly mBXS">
            <div class="bulletList inner">
              <div class="content">
                <ul class="bulletList">
                  <li><span class="visuallyHidden">Track album</span><a class="link" data-test-id="link">album</a></li>
                  <!--v-if-->
                  <li><span class="visuallyHidden">Track artists</span>
                    <ul class="commaList">
                      <li data-test-id="artist-list-item"><a aria-label="Go to artist name" class="link">name</a></li>
                      <li data-test-id="artist-list-item"><a aria-label="Go to artist name1" class="link">name1</a></li>
                    </ul>
                  </li>
                  <!--v-if-->
                  <li><span class="visuallyHidden">Duration</span><span><!--v-if--><time>00:19</time></span></li>
                </ul>
              </div>
            </div>
          </div>
        </div><button class="centerItems buttonLink" type="button" title="Like track">
          <phheart aria-hidden="true" class="icon" size="24" weight="regular"></phheart><span class="clamp text visuallyHidden">Like track</span>
        </button>
      </div>
    </div>
    <div class="trackCell trackSecondary">
      <div class="marqueeScroll">
        <div class="bulletList inner">
          <div class="content">
            <ul class="commaList">
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name" class="link">name</a></li>
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name1" class="link">name1</a></li>
            </ul>
          </div>
        </div>
      </div>
    </div><time class="trackCell trackTime">00:19</time>
    <div class="trackCell trackOptions">
      <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" type="button" title="More">
          <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
        </button>
        <!--v-if-->
      </div>
    </div>
  </div>
</div>"
`;

exports[`AlbumTracksList > when tracks prop is not an empty array > when track.artists is an empty array > matches the snapshot 1`] = `
"<div class="trackTable">
  <div class="trackHeader">
    <div class="trackCell">Track</div>
    <div class="trackCell trackSecondary">Artists</div>
    <div class="trackCell trackTime">Duration</div>
    <div class="trackCell trackOptions"></div>
  </div>
  <div class="trackRow" data-test-id="track">
    <div class="trackCell">
      <div>
        <div class="overlapWrapper trackPlayPause">
          <p class="overlap trackNumber">1</p>
          <div class="overlap playPauseWrapper"><button class="centerItems buttonLink centerAll themeHoverButton globalLink buttonLink centerAll themeHoverButton globalLink buttonLink" type="button">
              <phplay aria-hidden="true" class="icon" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play track </span>
            </button></div>
        </div>
        <div class="noTouchEvents trackMeta">
          <div class="marqueeScroll mBXS" inert="">
            <div class="bulletList inner">
              <div class="content">
                <h4>track-0</h4>
              </div>
            </div>
          </div>
          <div class="marqueeScroll smallFont mobileOnly mBXS">
            <div class="bulletList inner">
              <div class="content">
                <ul class="bulletList">
                  <li><span class="visuallyHidden">Track album</span><a class="link" data-test-id="link">album</a></li>
                  <!--v-if-->
                  <!--v-if-->
                  <!--v-if-->
                  <li><span class="visuallyHidden">Duration</span><span><!--v-if--><time>00:19</time></span></li>
                </ul>
              </div>
            </div>
          </div>
        </div><button class="centerItems buttonLink" type="button" title="Like track">
          <phheart aria-hidden="true" class="icon" size="24" weight="regular"></phheart><span class="clamp text visuallyHidden">Like track</span>
        </button>
      </div>
    </div>
    <div class="trackCell trackSecondary">
      <!--v-if-->
    </div><time class="trackCell trackTime">00:19</time>
    <div class="trackCell trackOptions">
      <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" type="button" title="More">
          <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
        </button>
        <div class="dropdown fade-enter-from fade-enter-active">
          <ul>
            <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" type="button">
                <!--v-if--><span class="clamp text"> Add to playlist </span>
              </button></li>
            <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" type="button">
                <!--v-if--><span class="clamp text"> Media information </span>
              </button></li>
            <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" type="button">
                <!--v-if--><span class="clamp text"> Download track </span>
              </button></li>
            <li aria-hidden="true" class="divider"></li>
            <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" type="button">
                <!--v-if--><span class="clamp text"> Add to queue </span>
              </button></li>
            <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" type="button">
                <!--v-if--><span class="clamp text"> Play Track </span>
              </button></li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>"
`;
